--- a/index.html
+++ b/index.html
@@ -8,15 +8,37 @@
     <title>My Anima</title>
 </head>
 <body>
-    <nav class="navbar bg-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark py-3">
         <div class="container-fluid">
-            <div class="container"><a class="navbar-brand text-white fs-4 fw-bold" href="#">My Animation</a></div>
+          <a class="navbar-brand fs-3 fw-bold text-white ms-5 ps-5" href="#">My animation</a>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav menu-list">
+            <li class="nav-item">
+                <div class="arrow"></div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" aria-current="page" href="#">My work?</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="#">Other animations</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="#">Changelog</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+                <div class="arrow2"></div>
+            </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
 
-    <div class="animaheader"></div>
-
-    <div class="animachar"></div>
+    <div id="animaheader"></div>
+    <div id="animachar1"></div>
+    <div id="animachar2"></div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js" integrity="sha512-jEnuDt6jfecCjthQAJ+ed0MTVA++5ZKmlUcmDGBv2vUI/REn6FuIdixLNnQT+vKusE2hhTk2is3cFvv5wA+Sgg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
